[gd_scene load_steps=2 format=3 uid="uid://story_event_popup"]

[ext_resource type="Script" path="res://scripts/ui/StoryEventPopup.gd" id="1_script"]

[node name="StoryEventPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("1_script")

[node name="BackgroundDim" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.75)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="PanelContainer" parent="CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 350)
layout_mode = 2

[node name="PanelBG" type="ColorRect" parent="CenterContainer/Panel"]
layout_mode = 2
color = Color(0.129, 0.149, 0.18, 1)

[node name="VBox" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MarginTop" type="Control" parent="CenterContainer/Panel/VBox"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.902, 0.929, 0.953, 1)
theme_override_font_sizes/font_size = 26
text = "이벤트 제목"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/Panel/VBox"]
layout_mode = 2

[node name="DescriptionLabel" type="RichTextLabel" parent="CenterContainer/Panel/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(450, 100)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.545, 0.58, 0.62, 1)
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "이벤트 설명이 여기에 표시됩니다. 상황을 설명하고 선택지로 이어지는 내용입니다."
fit_content = true

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/Panel/VBox"]
layout_mode = 2

[node name="ChoicesLabel" type="Label" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.902, 0.929, 0.953, 1)
theme_override_font_sizes/font_size = 14
text = "선택하세요"
horizontal_alignment = 1

[node name="ChoicesContainer" type="VBoxContainer" parent="CenterContainer/Panel/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
theme_override_constants/separation = 12

[node name="SkipButton" type="Button" parent="CenterContainer/Panel/VBox"]
unique_name_in_owner = true
visible = false
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 16
text = "계속하기"

[node name="MarginBottom" type="Control" parent="CenterContainer/Panel/VBox"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
