extends Control
## StoryEventPopup - ìŠ¤í† ë¦¬ ì´ë²¤íŠ¸ íŒì—…
## StoryManager.story_event_triggered ì‹œê·¸ë„ê³¼ ì—°ë™
##
## ì‘ì„±ì¼: 2025-11-26
## ì°¸ì¡°: 04_ui_design_system.md Â§6.4

signal choice_selected(event_id: String, choice_index: int)
signal popup_closed

# ============================================
# UI ë…¸ë“œ ì°¸ì¡°
# ============================================

@onready var background_dim: ColorRect = $BackgroundDim
@onready var panel: PanelContainer = $CenterContainer/Panel
@onready var title_label: Label = $CenterContainer/Panel/VBox/TitleLabel
@onready var description_label: RichTextLabel = $CenterContainer/Panel/VBox/DescriptionLabel
@onready var choices_container: VBoxContainer = $CenterContainer/Panel/VBox/ChoicesContainer
@onready var skip_button: Button = $CenterContainer/Panel/VBox/SkipButton

# ============================================
# ë””ìì¸ ì‹œìŠ¤í…œ ìƒ‰ìƒ
# ============================================

const COLOR_BG_ELEVATED = Color("#30363D")
const COLOR_BG_TERTIARY = Color("#21262D")
const COLOR_ACCENT_SECONDARY = Color("#1F6FEB")
const COLOR_ACCENT_WARNING = Color("#D29922")
const COLOR_TEXT_PRIMARY = Color("#E6EDF3")
const COLOR_TEXT_SECONDARY = Color("#8B949E")
const COLOR_TEXT_MUTED = Color("#6E7681")

# ============================================
# ìƒíƒœ ë³€ìˆ˜
# ============================================

var _current_event: Dictionary = {}
var _choice_buttons: Array[Button] = []

# ============================================
# ì´ˆê¸°í™”
# ============================================


func _ready() -> void:
	visible = false
	modulate.a = 0

	if skip_button:
		skip_button.pressed.connect(_on_skip_pressed)
		skip_button.visible = false  # ê¸°ë³¸ì ìœ¼ë¡œ ìˆ¨ê¹€

	if background_dim:
		background_dim.gui_input.connect(_on_background_clicked)

	# StoryManager ì‹œê·¸ë„ ì—°ê²°
	if StoryManager:
		StoryManager.story_event_triggered.connect(_on_story_event_triggered)
		StoryManager.choice_made.connect(_on_choice_made)


func _input(event: InputEvent) -> void:
	if visible and event.is_action_pressed("ui_cancel"):
		# ESCë¡œ ë‹«ê¸° (ì„ íƒì§€ ì—†ëŠ” ì´ë²¤íŠ¸ë§Œ)
		if _current_event.get("choices", []).is_empty():
			_close_popup()
			get_viewport().set_input_as_handled()


# ============================================
# ê³µê°œ API
# ============================================


## ì´ë²¤íŠ¸ í‘œì‹œ
## @param event: Dictionary from StoryManager
##   - id: String
##   - event_type: String
##   - title: String
##   - description: String
##   - choices: Array of {id, text, available, requirement_text}
##   - priority: String
##   - tags: Array
func show_event(event: Dictionary) -> void:
	_current_event = event

	# UI ì—…ë°ì´íŠ¸
	_update_title(event)
	_update_description(event)
	_create_choice_buttons(event.get("choices", []))
	_update_skip_button(event)

	# í‘œì‹œ ë° ì• ë‹ˆë©”ì´ì…˜
	visible = true
	_animate_show()


## íŒì—… ë‹«ê¸°
func hide_popup() -> void:
	_close_popup()


# ============================================
# UI ì—…ë°ì´íŠ¸
# ============================================


func _update_title(event: Dictionary) -> void:
	if not title_label:
		return

	var title = event.get("title", "ì´ë²¤íŠ¸")
	title_label.text = title

	# ì´ë²¤íŠ¸ íƒ€ì…ì— ë”°ë¥¸ ì•„ì´ì½˜ ì¶”ê°€
	var event_type = event.get("event_type", "")
	var icon = _get_event_icon(event_type)
	if not icon.is_empty():
		title_label.text = icon + " " + title


func _update_description(event: Dictionary) -> void:
	if not description_label:
		return

	var description = event.get("description", "")
	description_label.text = description


func _create_choice_buttons(choices: Array) -> void:
	if not choices_container:
		return

	# ê¸°ì¡´ ë²„íŠ¼ ì œê±°
	for btn in _choice_buttons:
		btn.queue_free()
	_choice_buttons.clear()

	# ì„ íƒì§€ ì—†ìœ¼ë©´ ì¢…ë£Œ
	if choices.is_empty():
		return

	# ì„ íƒì§€ ë²„íŠ¼ ìƒì„±
	for i in range(choices.size()):
		var choice = choices[i]
		var btn = _create_choice_button(choice, i)
		choices_container.add_child(btn)
		_choice_buttons.append(btn)

		# ìˆœì°¨ í˜ì´ë“œì¸
		btn.modulate.a = 0
		var tween = create_tween()
		tween.tween_property(btn, "modulate:a", 1.0, 0.2).set_delay(0.1 + i * 0.1)


func _create_choice_button(choice: Dictionary, index: int) -> Button:
	var btn = Button.new()
	btn.custom_minimum_size = Vector2(0, 60)
	btn.size_flags_horizontal = Control.SIZE_EXPAND_FILL

	# í…ìŠ¤íŠ¸
	var text = choice.get("text", "ì„ íƒ %d" % (index + 1))
	var available = choice.get("available", true)
	var requirement = choice.get("requirement_text", "")

	if available:
		btn.text = text
	else:
		btn.text = text + "\n[ì¡°ê±´: %s]" % requirement if requirement else text
		btn.disabled = true

	# ìŠ¤íƒ€ì¼
	btn.add_theme_font_size_override("font_size", 16)

	if available:
		btn.add_theme_color_override("font_color", COLOR_TEXT_PRIMARY)
	else:
		btn.add_theme_color_override("font_color", COLOR_TEXT_MUTED)

	# í´ë¦­ ì´ë²¤íŠ¸
	btn.pressed.connect(_on_choice_pressed.bind(index))

	# í˜¸ë²„ íš¨ê³¼
	btn.mouse_entered.connect(func(): _on_choice_hover(btn, true))
	btn.mouse_exited.connect(func(): _on_choice_hover(btn, false))

	return btn


func _update_skip_button(event: Dictionary) -> void:
	if not skip_button:
		return

	# ì„ íƒì§€ ì—†ëŠ” ì´ë²¤íŠ¸ë§Œ ìŠ¤í‚µ ê°€ëŠ¥
	var choices = event.get("choices", [])
	skip_button.visible = choices.is_empty()


# ============================================
# ì• ë‹ˆë©”ì´ì…˜
# ============================================


func _animate_show() -> void:
	# ë°°ê²½ í˜ì´ë“œì¸
	var bg_tween = create_tween()
	bg_tween.tween_property(self, "modulate:a", 1.0, 0.2)

	# íŒ¨ë„ ìŠ¬ë¼ì´ë“œ + ìŠ¤ì¼€ì¼
	if panel:
		panel.scale = Vector2(0.9, 0.9)
		panel.pivot_offset = panel.size / 2

		var panel_tween = create_tween()
		panel_tween.set_ease(Tween.EASE_OUT)
		panel_tween.set_trans(Tween.TRANS_BACK)
		panel_tween.tween_property(panel, "scale", Vector2(1.0, 1.0), 0.3)


func _animate_hide(callback: Callable = Callable()) -> void:
	var tween = create_tween()
	tween.set_ease(Tween.EASE_IN)
	tween.tween_property(self, "modulate:a", 0.0, 0.15)
	tween.tween_callback(
		func():
			visible = false
			if callback.is_valid():
				callback.call()
	)


func _close_popup() -> void:
	_animate_hide(
		func():
			popup_closed.emit()
			_current_event = {}
	)


# ============================================
# ì´ë²¤íŠ¸ í•¸ë“¤ëŸ¬
# ============================================


func _on_story_event_triggered(event: Dictionary) -> void:
	show_event(event)


func _on_choice_made(_event_id: String, _choice_index: int, result: Dictionary) -> void:
	# ì„ íƒ ê²°ê³¼ ì²˜ë¦¬
	if result.get("success", false):
		# íš¨ê³¼ í‘œì‹œ (í•„ìš”ì‹œ)
		var effects = result.get("effects_applied", [])
		if not effects.is_empty():
			print("[StoryEventPopup] Effects: %s" % effects)

		# ë‹¤ìŒ ì´ë²¤íŠ¸ í™•ì¸
		var next_event = result.get("next_event", {})
		if not next_event.is_empty():
			# ì ì‹œ ëŒ€ê¸° í›„ ë‹¤ìŒ ì´ë²¤íŠ¸ í‘œì‹œ
			await get_tree().create_timer(0.3).timeout
			show_event(next_event)
		else:
			_close_popup()


func _on_choice_pressed(index: int) -> void:
	var event_id = _current_event.get("id", "")
	if event_id.is_empty():
		return

	print("[StoryEventPopup] Choice selected: %d for event %s" % [index, event_id])
	choice_selected.emit(event_id, index)

	# StoryManagerë¡œ ì„ íƒ ì „ë‹¬
	if StoryManager:
		var _result = await StoryManager.make_choice(event_id, index)
		# ê²°ê³¼ëŠ” choice_made ì‹œê·¸ë„ë¡œ ì²˜ë¦¬ë¨


func _on_choice_hover(btn: Button, is_hover: bool) -> void:
	if btn.disabled:
		return

	if is_hover:
		var tween = create_tween()
		tween.tween_property(btn, "modulate", Color(1.2, 1.2, 1.2), 0.1)
	else:
		var tween = create_tween()
		tween.tween_property(btn, "modulate", Color.WHITE, 0.1)


func _on_skip_pressed() -> void:
	_close_popup()


func _on_background_clicked(event: InputEvent) -> void:
	# ì„ íƒì§€ ì—†ëŠ” ì´ë²¤íŠ¸ë§Œ ë°°ê²½ í´ë¦­ìœ¼ë¡œ ë‹«ê¸°
	if event is InputEventMouseButton and event.pressed and event.button_index == MOUSE_BUTTON_LEFT:
		if _current_event.get("choices", []).is_empty():
			_close_popup()


# ============================================
# ìœ í‹¸ë¦¬í‹°
# ============================================


func _get_event_icon(event_type: String) -> String:
	match event_type:
		"story":
			return "ğŸ“–"
		"training":
			return "ğŸ’ª"
		"match":
			return "âš½"
		"relationship":
			return "ğŸ¤"
		"career":
			return "ğŸ“ˆ"
		"random":
			return "ğŸ²"
		"milestone":
			return "ğŸ†"
		_:
			return ""
